--- a/src/assets/styles/entry/_app.styl
+++ b/src/assets/styles/entry/_app.styl
@@ -1,4 +1,5 @@
 @require '~roboto-fontface/css/roboto/roboto-fontface.css';
 @require '~@mdi/font/css/materialdesignicons.min.css';
+@require '~@fortawesome/fontawesome-free/css/all.min.css';
 
 @require './_variable.styl';
