--- a/src/assets/styles/entry/_variable.styl
+++ b/src/assets/styles/entry/_variable.styl
@@ -1,1 +1,6 @@
 @require '~vuetify/src/stylus/settings/_variables.styl';
+
+@require '../variable/_color.styl';
+@require '../variable/_font.styl';
+@require '../variable/_media.styl';
+@require '../variable/_zindex.styl';
