<master>[modified] update view

--- a/src/assets/styles/entry/_view.styl
+++ b/src/assets/styles/entry/_view.styl
@@ -2,8 +2,11 @@
 
 // for html
 scroll-view()
-    overflow-x: hidden; overflow-y: visible;
+    overflow-x: hidden;
     width: 100%; height: auto;
+
+    #content
+        overflow-x: hidden;
 
 // for html
 static-view()
@@ -13,3 +16,6 @@ static-view()
 
     overflow-x: hidden; overflow-y: hidden;
     width: 100%; height: 100%;
+
+    #content
+        overflow-x: hidden;
