<master>[modified] colors

--- a/src/assets/styles/entry/_variable.styl
+++ b/src/assets/styles/entry/_variable.styl
@@ -1,4 +1,5 @@
 @require '~vuetify/src/stylus/settings/_variables.styl';
+@require '~vuetify/src/stylus/settings/_colors.styl';
 
 @require '../variable/_color.styl';
 @require '../variable/_font.styl';
