--- a/src/assets/styles/entry/_variable.styl
+++ b/src/assets/styles/entry/_variable.styl
@@ -1,5 +1,7 @@
 @require '~vuetify/src/stylus/settings/_variables.styl';
 @require '~vuetify/src/stylus/settings/_colors.styl';
+@require '~vuetify/src/stylus/settings/_elevations.styl';
+@require '~vuetify/src/stylus/settings/_themes.styl';
 
 @require '../variable/_color.styl';
 @require '../variable/_font.styl';
