<master>[modified] add functions.styl

--- a/src/assets/styles/entry/_variable.styl
+++ b/src/assets/styles/entry/_variable.styl
@@ -6,3 +6,4 @@
 @require '../variable/_font.styl';
 @require '../variable/_media.styl';
 @require '../variable/_zindex.styl';
+@require '../variable/_functions.styl';
