--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -2,3 +2,21 @@
 
 canvas
     display: block;
+
+iframe
+    display: block;
+
+.cupo
+    cursor: pointer;
+
+.hoda
+    &:hover
+        position: relative;
+
+        &::after
+            content: '';
+            display: block;
+            position: absolute;
+            width: 100%; height: 100%;
+            top: 0; left: 0;
+            background-color: rgba(0, 0, 0, 0.05)
