<master>[modified] rename

--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -6,10 +6,10 @@ canvas
 iframe
     display: block;
 
-.cupo
+.cursor-pointer
     cursor: pointer;
 
-.hoda
+.hover-active
     &:hover
         position: relative;
 
