--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -3,6 +3,11 @@
 canvas, iframe
     display: block;
 
+.full-height
+    height: 100%;
+.full-width
+    width: 100%;
+
 .cursor-pointer
     cursor: pointer;
 
