<master>[modified] center

--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -7,6 +7,8 @@ canvas, iframe
     height: 100%;
 .full-width
     width: 100%;
+x-center()
+    margin-left: auto; margin-right: auto;
 
 .cursor-pointer
     cursor: pointer;
