<master>[modified] add indent

--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -10,6 +10,9 @@ canvas, iframe
 x-center()
     margin-left: auto; margin-right: auto;
 
+.indent
+    margin-left: 2rem;
+
 .cursor-pointer
     cursor: pointer;
 
