--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -13,6 +13,9 @@ x-center()
 .indent
     margin-left: 2rem;
 
+.relative
+    position: relative;
+
 .cursor-pointer
     cursor: pointer;
 
@@ -27,3 +30,19 @@ x-center()
             width: 100%; height: 100%;
             top: 0; left: 0;
             background-color: rgba(0, 0, 0, 0.05)
+
+.filepicker
+    position: absolute;
+    display: block;
+    opacity: 0;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    z-index: 1;
+
+    &:after
+        content: '';
+        position: absolute;
+        display: block;
+        cursor: pointer;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
