--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -34,6 +34,7 @@ x-center()
 .filepicker
     position: absolute;
     display: block;
+    overflow: hidden;
     opacity: 0;
     top: 0; left: 0;
     width: 100%; height: 100%;
