<master>[modified] fix css

--- a/src/assets/styles/entry/_view.styl
+++ b/src/assets/styles/entry/_view.styl
@@ -3,23 +3,17 @@
 
 // for html
 scroll-view()
-    overflow-x: hidden;
     width: 100%; height: auto;
 
-    #content
+    &, body, #app, #app > div, #content, #content > div
         overflow-x: hidden;
 
 // for html
 static-view()
     // height relay
     &, body, #app, #app > div, #content, #content > div
-        height: 100%;
-
-    overflow-x: hidden; overflow-y: hidden;
-    width: 100%; height: 100%;
-
-    #content
-        overflow-x: hidden;
+        width: 100%; height: 100%;
+        overflow-x: hidden; overflow-y: hidden;
 
 main-pane($max-width)
     width: 100%; max-width: $max-width;
