<master>[modified] add default

--- a/src/assets/styles/entry/_view.styl
+++ b/src/assets/styles/entry/_view.styl
@@ -15,7 +15,7 @@ static-view()
         width: 100%; height: 100%;
         overflow-x: hidden; overflow-y: hidden;
 
-main-pane($max-width)
+main-pane($max-width = 100%)
     width: 100%; max-width: $max-width;
     height: 100%;
     x-center();
