--- a/src/assets/styles/entry/_view.styl
+++ b/src/assets/styles/entry/_view.styl
@@ -3,7 +3,7 @@
 
 // for html
 scroll-view()
-    width: 100%; height: auto;
+    width: 100vw; height: auto;
 
     &, body, #app, #app > div, #content, #content > div
         overflow-x: hidden;
@@ -12,7 +12,7 @@ scroll-view()
 static-view()
     // height relay
     &, body, #app, #app > div, #content, #content > div
-        width: 100%; height: 100%;
+        width: 100vw; height: 100vh;
         overflow-x: hidden; overflow-y: hidden;
 
 main-pane($max-width = 100%)
