--- a/src/assets/styles/entry/_view.styl
+++ b/src/assets/styles/entry/_view.styl
@@ -12,7 +12,7 @@ scroll-view()
 static-view()
     // height relay
     &, body, #app, #app > div, #content, #content > div
-        width: 100vw; height: 100vh;
+        width: 100%; height: 100%;
         overflow-x: hidden; overflow-y: hidden;
 
 main-pane($max-width = 100%)
