--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -5,8 +5,14 @@ canvas, iframe
 
 .full-height
     height: 100%;
+    min-height: 100%;
+    max-height: 100%;
+
 .full-width
     width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+
 x-center()
     margin-left: auto; margin-right: auto;
 
