--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -3,6 +3,10 @@
 canvas, iframe
     display: block;
 
+a
+    color: inherit;
+    text-decoration: none;
+
 .full-height
     height: 100%;
     min-height: 100%;
