--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -4,8 +4,12 @@ canvas, iframe
     display: block;
 
 a
-    color: inherit;
-    text-decoration: none;
+    &, &:link, &:visited, &:hover, &:active
+        color: inherit;
+        text-decoration: none;
+
+pre
+	white-space: pre-wrap;
 
 .full-height
     height: 100%;
@@ -22,6 +26,9 @@ x-center()
 
 .indent
     margin-left: 2rem;
+
+.block
+    display: block;
 
 .relative
     position: relative;
