--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -61,3 +61,6 @@ x-center()
         cursor: pointer;
         top: 0; left: 0;
         width: 100%; height: 100%;
+
+.v-card__text
+    padding-top: 1rem !important;
