<master>[modified] fix snackbar button

--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -65,3 +65,12 @@ x-center()
 .v-card__text
     padding-top: 1rem !important;
     color: black !important;
+
+.v-snack__content
+    button
+        display: block;
+        width: 4rem !important;
+
+        .v-btn__content
+            width: 100% !important;
+            margin: -0.25rem;
