--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -62,6 +62,10 @@ x-center()
         top: 0; left: 0;
         width: 100%; height: 100%;
 
+.v-content__wrap
+    height: 100%;
+    min-height: 100%;
+
 .v-card__text
     padding-top: 1rem !important;
     color: black !important;
