--- a/src/assets/styles/style/_common.styl
+++ b/src/assets/styles/style/_common.styl
@@ -30,6 +30,9 @@ x-center()
 .relative
     position: relative;
 
+.absolute
+    position: absolute;
+
 .cursor-pointer
     cursor: pointer;
 
@@ -61,6 +64,9 @@ x-center()
         cursor: pointer;
         top: 0; left: 0;
         width: 100%; height: 100%;
+
+.v-dialog__container
+    position: absolute;
 
 .v-card__text
     padding-top: 1rem !important;
